--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,5 +21,13 @@ layout: default
   {% if page.aside == true %}{% include site-aside.html %}{% endif %}
 
 </main>
+<div class="PageNavigation">
+  {% if page.previous.url %}
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
+</div>
 
 {% include site-footer.html %}
