--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -3,7 +3,7 @@ title: false
 styles: true
 ---
 
-@import "alembic";
+# @import "alembic";
 .PageNavigation {
   font-size: 14px;
   display: block;
