--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -3,6 +3,8 @@ title: false
 styles: true
 ---
 
+# @import "alembic";
+.typeset{color:white;}
 .PageNavigation {
   font-size: 14px;
   display: block;
